--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,6 +107,10 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.7'
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.7'
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+    //Moshi Library Dependencies - Core Moshi JSON Library and Moshi's Kotlin support and converter factory
+    implementation "com.squareup.moshi:moshi:1.12.0"
+    implementation "com.squareup.moshi:moshi-kotlin:1.12.0"
+
     // Room
     implementation "androidx.room:room-runtime:2.4.2"
     kapt "androidx.room:room-compiler:2.4.2"
