--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,4 +122,8 @@ dependencies {
     //Timber
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
+
+    //Flow Layout
+    implementation 'com.google.accompanist:accompanist-flowlayout:0.24.9-beta'
+
 }
