--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation 'androidx.activity:activity-compose:1.4.0'
-    implementation 'androidx.compose.animation:animation-graphics:+'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -87,6 +87,8 @@ dependencies {
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation 'androidx.activity:activity-compose:1.6.0-alpha03'
     implementation 'com.google.accompanist:accompanist-swiperefresh:0.24.7-alpha'
+    implementation 'androidx.compose.animation:animation-graphics:1.2.0-rc01'
+    implementation 'androidx.compose.animation:animation-core:1.0.0-alpha09'
 
     // Compose Nav Destinations
     implementation 'io.github.raamcosta.compose-destinations:core:1.5.2-beta'
