--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AsteroidsInCompose"
         tools:targetApi="31">
+
+        <provider
+            android:authorities="com.uxstate.fileprovider"
+            android:name="androidx.core.content.FileProvider"
+            android:grantUriPermissions="true"
+            android:exported="false">
+
+            <meta-data android:name="android.support.FILE_PROVIDER_PATHS"/>
+        </provider>
         <activity
             android:name=".presentation.MainActivity"
             android:exported="true"
