--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_deep_space"
+        android:icon="@mipmap/ic_free_galaxy"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_deep_space_round"
+        android:roundIcon="@mipmap/ic_free_galaxy_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AsteroidsInCompose"
         tools:targetApi="31">
