--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,73 +68,73 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation libs.core.ktx
+    implementation libs.ui
 
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
-    implementation 'androidx.activity:activity-compose:1.6.0'
+    implementation libs.ui.tooling.preview
+    implementation libs.lifecycle.runtime.ktx
+    implementation libs.activity.compose
 
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    testImplementation libs.junit.junit
+    androidTestImplementation libs.androidx.test.ext.junit
+    androidTestImplementation libs.espresso.core
+    androidTestImplementation libs.ui.test.junit4
+    debugImplementation libs.ui.tooling
+    debugImplementation libs.ui.test.manifest
+    coreLibraryDesugaring libs.desugar.jdk.libs
 
     // Material 3
 
-    //implementation 'androidx.compose.material3:material3:1.0.0-beta03'
-    implementation 'androidx.compose.material3:material3:1.0.0-rc01'
+    //implementation libs.material3
+    implementation libs.material3
     // Compose dependencies
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1"
-    implementation "androidx.compose.material:material-icons-extended:$compose_version"
-    implementation 'androidx.activity:activity-compose:1.6.0-alpha03'
-    implementation 'com.google.accompanist:accompanist-swiperefresh:0.24.7-alpha'
-    implementation 'androidx.compose.animation:animation-graphics:1.2.0-rc01'
-    implementation 'androidx.compose.animation:animation-core:1.0.0-alpha09'
+    implementation libs.lifecycle.viewmodel.compose
+    implementation libs.material.icons.extended
+    implementation libs.activity.compose
+    implementation libs.accompanist.swiperefresh
+    implementation libs.animation.graphics
+    implementation libs.animation.core
 
     // Compose Nav Destinations
-    implementation 'io.github.raamcosta.compose-destinations:core:1.5.2-beta'
-    ksp 'io.github.raamcosta.compose-destinations:ksp:1.5.2-beta'
+    implementation libs.io.github.raamcosta.compose.destinations.core
+    ksp libs.ksp
 
     // Coil
-    implementation "io.coil-kt:coil-compose:2.1.0"
+    implementation libs.coil.compose
 
     //Dagger - Hilt
-    implementation 'com.google.dagger:hilt-android:2.41'
-    kapt 'com.google.dagger:hilt-android-compiler:2.41'
-   // implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
-    kapt "androidx.hilt:hilt-compiler:1.0.0"
-    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    implementation libs.hilt.android
+    kapt libs.hilt.android.compiler
+   // implementation "androidx.hilt:hilt-lifecycle-viewmodel:_"
+    kapt libs.hilt.compiler
+    implementation libs.hilt.navigation.compose
 
     // Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
-    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.7'
-    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.7'
+    implementation libs.retrofit
+    implementation libs.converter.moshi
+    implementation libs.okhttp
+    implementation libs.logging.interceptor
 
     //Moshi Library Dependencies - Core Moshi JSON Library and Moshi's Kotlin support and converter factory
-    implementation "com.squareup.moshi:moshi:1.12.0"
-    implementation "com.squareup.moshi:moshi-kotlin:1.12.0"
+    implementation libs.moshi
+    implementation libs.moshi.kotlin
 
     // Room
-    implementation "androidx.room:room-runtime:2.4.3"
-    kapt "androidx.room:room-compiler:2.4.3"
+    implementation libs.room.runtime
+    kapt libs.room.compiler
 
     // Kotlin Extensions and Coroutines support for Room
-    implementation "androidx.room:room-ktx:2.4.3"
+    implementation libs.room.ktx
 
     //Timber
-    implementation 'com.jakewharton.timber:timber:5.0.1'
+    implementation libs.timber
 
 
     //Flow Layout
-    implementation 'com.google.accompanist:accompanist-flowlayout:0.24.9-beta'
+    implementation libs.accompanist.flowlayout
 
     //Lottie Animation
-    implementation "com.airbnb.android:lottie-compose:5.0.1"
+    implementation libs.lottie.compose
 
 
 }
