--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,13 @@ buildscript {
         compose_version = '1.1.1'
     }
     dependencies {
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.41"
+        classpath libs.hilt.android.gradle.plugin
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '8.5.0' apply false
-    id 'com.android.library' version '8.5.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+    id 'com.android.application' apply false
+    id 'com.android.library' apply false
+    id 'org.jetbrains.kotlin.android' apply false
 }
 
 task clean(type: Delete) {
