--- a/versions.properties
+++ b/versions.properties
@@ -7,22 +7,7 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
+version.androidx.compose.material=1.6.8
 version.moshi=1.15.1
-
 version.okhttp3=4.12.0
-##  # available=5.0.0-alpha.1
-##  # available=5.0.0-alpha.2
-##  # available=5.0.0-alpha.3
-##  # available=5.0.0-alpha.4
-##  # available=5.0.0-alpha.5
-##  # available=5.0.0-alpha.6
-##  # available=5.0.0-alpha.7
-##  # available=5.0.0-alpha.8
-##  # available=5.0.0-alpha.9
-##  # available=5.0.0-alpha.10
-##  # available=5.0.0-alpha.11
-##  # available=5.0.0-alpha.12
-##  # available=5.0.0-alpha.13
-##  # available=5.0.0-alpha.14
-
 version.retrofit2=2.11.0
